force-app/main/default/objects/Claim/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <description>SFP-10316 - Date claim was assessed.</description>
    <inlineHelpText>Date claim was assessed.</inlineHelpText>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>