force-app/main/default/objects/Claim/fields/Claim_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Reference_Number__c</fullName>
    <description>SFP-12613 - Auto-generated</description>
    <displayFormat>CL/{000000000}</displayFormat>
    <inlineHelpText>Auto-generated number to create a unique number for each claim record.</inlineHelpText>
    <label>Claim Reference Number</label>
    <type>AutoNumber</type>
</CustomField>