force-app/main/default/objects/Claim/fields/Date_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Loss__c</fullName>
    <description>SFP-12613 - Date loss happened</description>
    <inlineHelpText>Date loss occurred.</inlineHelpText>
    <label>Date of Loss</label>
    <type>Date</type>
</CustomField>