force-app/main/default/objects/Claim/fields/Date_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Reported__c</fullName>
    <description>SFP-12613 - Date incident was reported.</description>
    <inlineHelpText>Date incident was reported.</inlineHelpText>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>