force-app/main/default/objects/Claim/fields/Finalized_Date__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Date__c</fullName>
    <description>SFP-12613 - Date claim was finalized.</description>
    <inlineHelpText>Date claim was finalized</inlineHelpText>
    <label>Finalized Date</label>
    <type>Date</type>
</CustomField>