force-app/main/default/objects/Claim/fields/First_Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>First_Amount_Payable__c</fullName>
    <description>SFP-12613 - The excess amount customer agrees to pay.</description>
    <inlineHelpText>Excess payable.</inlineHelpText>
    <label>First Amount Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>