force-app/main/default/objects/Claim/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <description>SFP-10316  - The total amount of claim</description>
    <inlineHelpText>Total amount of claim before excess</inlineHelpText>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>