force-app/main/default/objects/Claim/validationRules/Block_Changing_Estimated_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Changing_Estimated_Amount</fullName>
    <active>true</active>
    <description>SFP-10316 VR blocks changing Estimated Amount after creation</description>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED( EstimatedAmount )
)</errorConditionFormula>
    <errorDisplayField>EstimatedAmount</errorDisplayField>
    <errorMessage>The Estimated Amount field cannot be changed after saving.</errorMessage>
</ValidationRule>