force-app/main/default/objects/Claim/validationRules/Block_Changing_Insured_Asset.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Changing_Insured_Asset</fullName>
    <active>true</active>
    <description>SFP-10316 User can not change Insured Asset after saving the record.</description>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED(InsuredAssetId) 
)</errorConditionFormula>
    <errorDisplayField>InsuredAssetId</errorDisplayField>
    <errorMessage>You can not change it after saving, if you have to change it please close this Claim and open another one with the correct value.</errorMessage>
</ValidationRule>